test/nashorn/script/basic/es6/let-redeclare-extra.js.EXPECTED
SyntaxError: test/nashorn/script/basic/es6/let-redeclare-extra.js#35:8<eval>:2:8 Variable "x" has already been declared
    let x = 2;
        ^
SyntaxError: test/nashorn/script/basic/es6/let-redeclare-extra.js#35:8<eval>:3:8 Variable "x" has already been declared
    var x = 2;
        ^
SyntaxError: test/nashorn/script/basic/es6/let-redeclare-extra.js#35:8<eval>:3:8 Variable "x" has already been declared
    let x = undefined;
        ^
SyntaxError: test/nashorn/script/basic/es6/let-redeclare-extra.js#35:8<eval>:2:10 Variable "x" has already been declared
    const x = function (){};
          ^
SyntaxError: test/nashorn/script/basic/es6/let-redeclare-extra.js#35:8<eval>:2:8 Variable "a" has already been declared
    let a = 2;
        ^
